Fix word wrap

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,12 +35,12 @@ body {
     text-align: center;
     color: whitesmoke;
     font-size: 150%;
-    word-break: break-word;
+    word-wrap: break-word;
 }
 
 .grid-row-2 {
     text-align: center;
     color: wheat;
     font-size: 150%;
-    word-break: break-word;
+    word-wrap: break-word;
 }
